--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="topbar">
     <div class="pill">Atlas Pack</div>
     <div class="pill">
-      <a href="./plane.html" style="color:inherit; text-decoration:none;">Plane</a>
+      <a href="./will-you-be-my-valentine-quandranea.html" style="color:inherit; text-decoration:none;">Plane</a>
       &nbsp;·&nbsp;
       <a href="./sphere.html" style="color:inherit; text-decoration:none;">Sphere</a>
       &nbsp;·&nbsp;
