--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Atlas Pack</title>
+  <title>Q+A</title>
   <link rel="stylesheet" href="./assets/atlas.css"/>
 </head>
 <body>
   <div class="topbar">
-    <div class="pill">Atlas Pack</div>
+    <div class="pill">Quandranea</div>
     <div class="pill">
-      <a href="./will-you-be-my-valentine-quandranea.html" style="color:inherit; text-decoration:none;">Plane</a>
+      <a href="./will-you-be-my-valentine-quandranea.html" style="color:inherit; text-decoration:none;">Valentine</a>
       &nbsp;·&nbsp;
-      <a href="./sphere.html" style="color:inherit; text-decoration:none;">Sphere</a>
+      <a href="./sphere.html" style="color:inherit; text-decoration:none;">Love</a>
       &nbsp;·&nbsp;
-      <a href="./about.html" style="color:inherit; text-decoration:none;">About</a>
+      <a href="./about.html" style="color:inherit; text-decoration:none;">You</a>
     </div>
   </div>
 
   <div style="padding:16px; color:var(--muted);">
-    Open <b>Plane</b> to see cards pulled live from your R2 bucket via Worker.
+    Open <b>Portal</b> to see cards pulled live from your R2 bucket via Worker.
   </div>
 </body>
 </html>
