--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="topbar">
     <div class="pill">Quandranea</div>
     <div class="pill">
-      <a href="./will-you-be-my-valentine-quandranea.html" style="color:inherit; text-decoration:none;">Valentine</a>
+      <a href="./will-you-be-my-valentine-quandranea.html" style="color:inherit; text-decoration:none;">I</a>
       &nbsp;·&nbsp;
       <a href="./sphere.html" style="color:inherit; text-decoration:none;">Love</a>
       &nbsp;·&nbsp;
